devtools/envoy-standalone/example_configs/v2/23-supi-no-lua.yaml
# Scenario 23:
# Similar to 21, but no LUA at all, and direct routing to province B.
# This is for benchmarking purposes, to get a baseline.

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: localhost
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: chf_ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: provinceB
          http_filters:
          - name: envoy.router
  clusters:
  - name: nrf-interrogator
    connect_timeout: 0.25s
    type: STRICT_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: nrf-interrogator
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: nrf-interrogator.5g-bsf-eedala.svc.cluster.local
                port_value: 80

  - name: provinceA
    connect_timeout: 0.25s
    type: STRICT_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: chf-provinceA
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-1
                port_value: 80

  - name: provinceB
    connect_timeout: 0.25s
    type: STRICT_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: chf-provinceB
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-2
                port_value: 80

  - name: provinceC
    connect_timeout: 0.25s
    type: STRICT_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: chf-provinceC
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-3
                port_value: 80
